# proj-PHIDL-ANALYSIS

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  example.py  poisson.py  pyproject.toml  requirements.txt  requirements.yml
src/phidlfem/: analysis.py  poisson.py  solvers.py  utilities.py
