[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phidlfem"
version = "0.0.1"
authors = [
  { name="Reed Foster", email="reedf@mit.edu" },
]
description = "Solve poisson equation on phidl geometries using DBC at ports and NBC everywhere else"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "phidl",
  "numpy",
  "matplotlib",
  "scipy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
