[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phidlfem"
version = "1.1.0"
authors = [
  { name="Reed Foster", email="reedf@mit.edu" },
]
description = "Tools for analyzing phidl devices using FEniCS/dolfinx"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "phidl",
  "numpy",
  "json"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
